# localmost

./: .gitignore  CHANGELOG.md  Makefile  README.md  localmost.cabal
.github/: matrix.sh
.github/workflows/: release.yaml  release.yml
app/: Main.hs
docs/: examples.md
src/: Config.hs  Localmost.hs  Protocol.hs  Shell.hs  Types.hs  Utils.hs
test/: ConfigSpec.hs  FullSpec.hs  LocalmostSpec.hs  ShellSpec.hs  Spec.hs  TestUtils.hs  test_cases.json
